# element_human-action-intention-recognition

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
app/: CMakeLists.txt
code/app/: CMakeLists.txt
code/modules/: CMakeLists.txt
code/modules/humanMotionDataAcquisition/: CMakeLists.txt
code/modules/humanMotionDataAcquisition/app/robots/: humanDataAcquisition.ini  humanDataStreamingOnlineTest.ini
code/modules/humanMotionDataAcquisition/src/: main.cpp  module.cpp  module_backup.cpp
code/modules/humanPredictionVisualizer/: CMakeLists.txt
code/modules/humanPredictionVisualizer/app/: CMakeLists.txt
code/modules/humanPredictionVisualizer/app/robots/: HumanPredictionVisualizer.ini
code/modules/humanPredictionVisualizer/src/: main.cpp
code/scripts/: README.md
code/src/: Data.py  RnnKeras.py  SequentialModel.py  TrainRNN.py  main.py  main2.py
dataset/bracelet/: synched_Bracelet1_2963017776.txt  synched_Bracelet2_3838972682.txt
dataset/humanActionRecognition_WristData/: explanation.txt
dataset/lifting_test/: dummy_data_for_training.txt  mean_data.csv  std_data.csv  test_data.csv  test_non_bug.txt
dataset/riskAssessment/: README.md
matlab/: B_Generate_NN_Structure.asv  B_Generate_NN_Structure.m  E_Final_Network_selection.m  plotTestSet.m  prepareDataset.m
matlab/HumanActionIntentionPrediction/: A_main_chunk_data.m  importfile.m  save_data_train_val_test.m
matlab/RiskAssessment/: A_Generate_NN_Structure.m  B_Generate_NN_Structure.m  B_Test_Online.m  C_Test_Online.m  GetSubDirsFirstLevelOnly.m  README.md  addRiskAssessmentDataToNN.m  extractData.m  importfile.m  plotTestSet.m  prepareDataset.m  prepareDatasetOnline.m
modules/: CMakeLists.txt
modules/PredictSequenceDataGenerated_module/: CMakeLists.txt
modules/PredictSequenceDataGenerated_module/include/: SequencePrediction.hpp
modules/PredictSequenceDataGenerated_module/src/: SequencePrediction.cpp  main.cpp
modules/humanMotionDataAcquisition/: CMakeLists.txt
scripts/: Data.py  Dataset.py  DatasetHumanMotionPrediction.py  PlotLosses.py  RnnKeras.py  __main__.py  main_simpleNN.py  plotOnlineExample.py
scripts/HAP_Sequential_API/: Baseline.py  DatasetUtility.py  RepeatBaseline.py  Utilities.py  WindowGenerator.py  main_online_recognition.py  main_training.py
scripts/HMP_Sequential_API/: DatasetUtility.py  VisualizeHuman.py  WindowGenerator.py  main_example.py  main_test_online.py
scripts/HumanActionRecognition_Sequential/: DatasetUtility.py  FeedBack.py  Utilities.py  WindowGenerator.py  main_training.py
scripts/MoE/: CustomLayers.py  DatasetUtility.py  GateLayer.py  Utilities.py  WindowGenerator.py  WindowGeneratorMoE.py  dataConfig.py  dataProcessing.py  guidedMoE.py  main_online_recognition.py  (+11 more)
(+232 files in other folders)
